# CHelper-Android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/Command List Notice/: NOTICE.TXT  README.TXT
app/src/main/assets/about/: about.txt  dependencies.txt  open_source_terms.txt  permissions.txt  privacy_policy.txt  release_note.txt  thanks.txt  update.txt
app/src/main/assets/cpack/: beta-experiment-1.21.0.23.cpack  beta-experiment-1.21.100.23.cpack  beta-experiment-1.21.100.24.cpack  beta-experiment-1.21.110.22.cpack  beta-experiment-1.21.110.25.cpack  beta-experiment-1.21.120.20.cpack  beta-experiment-1.21.20.21.cpack  beta-experiment-1.21.30.21.cpack  beta-experiment-1.21.30.22.cpack  beta-experiment-1.21.30.24.cpack  beta-experiment-1.21.40.22.cpack  beta-experiment-1.21.60.21.cpack  beta-experiment-1.21.60.27.cpack  beta-experiment-1.21.90.26.cpack  beta-experiment-1.21.90.27.cpack  beta-vanilla-1.21.0.23.cpack  beta-vanilla-1.21.100.22.cpack  beta-vanilla-1.21.100.23.cpack  beta-vanilla-1.21.100.24.cpack  (+31 more)
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: pch.h
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/chelper/: Core.cpp
app/src/main/cpp/src/chelper/node/param/: NodePosition.cpp
app/src/main/cpp/src/chelper/old2new/: Old2New.cpp  Old2New.h
easyfloat/: build.gradle
easyfloat/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+341 files in other folders)
